Lectura de JSON e igualar los valores a los atributos de la clase, pendiente con lectura si los atributos son List, estable solo con JSON y ENV